--- a/Hotel Management System/nbproject/project.properties
+++ b/Hotel Management System/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Hotel Management System
+application.vendor=Sanjaya
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,7 +33,9 @@ dist.jar=${dist.dir}/Hotel_Management_System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Hotel_Management_System
+endorsed.classpath=
 excludes=
+file.reference.jbcrypt-0.4.jar=src\\hotel\\lib\\jbcrypt-0.4.jar
 file.reference.lombok.jar=src\\hotel\\lib\\lombok.jar
 file.reference.mysql-connector-j-8.2.0.jar=src\\hotel\\lib\\mysql-connector-j-8.2.0.jar
 includes=**
@@ -40,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.lombok.jar}:\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
